# app/model/base_model.go
@@ -7,8 +7,8 @@ import (
 )
 
 type BaseModel struct {
-	ID        uint           `gorm:"primary_key" json:"id"`
-	CreatedAt time.Time      `gorm:"not null"`
-	UpdatedAt time.Time      `gorm:"not null"`
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted_at"`
+	ID        uint            `gorm:"primary_key" json:"id"`
+	CreatedAt time.Time       `gorm:"not null" json:"createdAt,omitempty"`
+	UpdatedAt time.Time       `gorm:"not null" json:"updatedAt,omitempty"`
+	DeletedAt *gorm.DeletedAt `gorm:"index" json:"deletedAt,omitempty"`
 }
