# app/model/user_model.go
@@ -2,12 +2,12 @@ package model
 
 type User struct {
 	BaseModel
-	Username   string `gorm:"unique;not null"`
-	Password   string `gorm:"not null"`
-	Fullname   string `gorm:"unique;not null"`
-	Avatar     string
-	Email      string  `gorm:"unique;not null"`
-	Order      []Order `gorm:"foreignKey:CreatedBy;references:ID"`
-	RoleInfoID uint    `gorm:"not null"`
-	Wallets    []Wallet
+	Username   string   `gorm:"unique;not null" json:"username,omitempty"`
+	Password   string   `gorm:"not null" json:"password,omitempty"`
+	Fullname   string   `gorm:"unique;not null" json:"fullname,omitempty"`
+	Avatar     string   `json:"avatar,omitempty"`
+	Email      string   `gorm:"unique;not null"`
+	Order      []Order  `gorm:"foreignKey:CreatedBy;references:ID" json:"ordes,omitempty"`
+	RoleInfoID uint     `gorm:"not null"`
+	Wallets    []Wallet `json:"allets,omitempty"`
 }
